# meridian

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/meridian/: Cargo.toml
crates/meridian-cli/: Cargo.toml
crates/meridian-cli/src/: main.rs
crates/meridian-cli/tests/: e2e_test.rs  openai_e2e_test.rs  openai_tools_e2e_test.rs  stream_e2e_test.rs
crates/meridian-transport/: Cargo.toml
crates/meridian-transport/src/: codec.rs  control.rs  factory.rs  lib.rs  mcp.rs  passthrough.rs  pool.rs  process.rs  spawn.rs
crates/meridian-transport/tests/: codec_test.rs  control_test.rs  factory_test.rs  hook_test.rs  initialize_test.rs  passthrough_live_test.rs  pool_test.rs  process_test.rs  spawn_test.rs
crates/meridian/src/: auth.rs  error.rs  lib.rs  oauth.rs  openai.rs  parked.rs  pooled_runner.rs  profile_cli.rs  profiles.rs  rate_limit.rs  server.rs  service.rs  session.rs  settings.rs  sse.rs  token_refresh.rs  tools.rs
crates/meridian/tests/: auth_refresh_route_test.rs  auth_route_test.rs  auth_test.rs  error_test.rs  oauth_test.rs  openai_chunk_test.rs  openai_handler_test.rs  openai_request_test.rs  openai_response_test.rs  openai_resume_test.rs  openai_stream_test.rs  openai_tools_handler_test.rs  openai_tools_test.rs  parked_test.rs  passthrough_handler_test.rs  profile_cli_test.rs  profile_mgmt_routes_test.rs  profile_routing_test.rs  profiles_effective_test.rs  profiles_test.rs  quota_route_test.rs  rate_limit_test.rs  resume_test.rs  server_test.rs  service_health_test.rs  (+9 more)
docs/: phase1-discovery-findings.md
(+10 files in other folders)
