[workspace]
resolver = "2"
members = ["crates/meridian-transport", "crates/meridian", "crates/meridian-cli"]

[workspace.package]
edition = "2021"
version = "0.0.0"

[workspace.dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
